Transform payoffs in the event of negative numbers, change to class syntax, reorg in subfolder

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <html>
   <head>
   	<script src="http://localhost:8000/jquery-3.2.1.min.js"></script>
-    <script src="http://localhost:8000/game_on_lattice/lattice.js"></script>
-    <script src="http://localhost:8000/game_on_lattice/game.js"></script>
-    <script src="http://localhost:8000/main.js"></script>
+    <script src="http://localhost:8000/game_on_lattice/dynamic_lattice.js"></script>
+    <script src="http://localhost:8000/game_on_lattice/paint_and_run.js"></script>
 
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -20,7 +19,7 @@
  	<div class="page_center_div" id="meat_div"></div>
 
   	<script>
-  		$( "#meat_div" ).load( "http://localhost:8000/game_on_lattice.html" );
+  		$( "#meat_div" ).load( "http://localhost:8000/game_on_lattice/game_on_lattice.html" );
   	</script>
    
   </body>
