--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   	<script src="http://localhost:8000/jquery-3.2.1.min.js"></script>
     <script src="http://localhost:8000/game_on_lattice/dynamic_lattice.js"></script>
     <script src="http://localhost:8000/game_on_lattice/paint_and_run.js"></script>
-
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="game_on_lattice/styles.css">
   </head>
 
 
